2006-11-21  Nurdin Premji  <npremji@redhat.com>

	* fstack.java: Changed to use FindProc interface. 
	* fcore.java: Ditto.
	
2006-11-14  Phil Muldoon  <pmuldoon@redhat.com>

	* fcore.xml: Cleaned up the man file. Added options explanation.

2006-11-14  Phil Muldoon  <pmuldoon@redhat.com>

	* fcore.java: New.
	* fcore.xml: New.

2006-11-01  Nurdin Premji  <npremji@redhat.com>

	* fstack.java (main): Changed to reflect StacktraceObserver using a StringBuffer instead
	of a PrintWriter.	

2006-10-27  Nurdin Premji  <npremji@redhat.com>

	* fstack.java: Changed to use  frysk.util.StacktraceObserver.

2006-10-25  Nurdin Premji  <npremji@redhat.com>

	* fstack.java: Changed to find the proc rather than passing a pid to FStack.
	(main): used new methods Fstack.scheduleStackAndRunEvent and Proc.requestAbandonAndRunEvent.	

2006-10-22  Mike Cvet  <mcvet@redhat.com>

	* fcrash.java (run): Removed unnecessary checks.
	(addOptions) Added -p option for tracing PIDs.

2006-10-20  Mike Cvet  <mcvet@redhat.com>
	
	* fcrash.java: Added.

2006-10-19  Nurdin Premji  <npremji@redhat.com>

	* fstack.java (main): Changed to run the eventloop here rather than in 
	frysk.util.FStack.

2006-10-13  Andrew Cagney  <cagney@redhat.com>

	* fstack.java: Coding nit, remove false== and null==.

2006-10-06  Tom Tromey  <tromey@redhat.com>

	* ftrace.java: Refactored to use
	frysk/util/Ftrace.java. Added command line options.

2006-10-06  Nurdin Premji <npremji@redhat.com>

	* fstack.java: Moved most methods (except main and
	command line parsing) to frysk/util/FStack.java.

2006-10-04  Nurdin Premji <npremji@redhat.com>

	* fstack.java: 
	Ran gnu styler.
	Used procAttachedObserver rather than procTasksObserver
	(addOptions): Added information about ALL logging option.
	(removeObservers): Changed to use the process not the task.
	(requestDeletes): Added, removes the attachedObserver from all of the tasks.