@@ -1,3 +1,12 @@
+2006-11-27  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* fcore.xml: Added pids repeat option argument.
+	* fcore.java (parser.Host.FindProc.procNotFound): Clean-up exit
+	message, and conditions.
+	(parser.Host.FindProc.procFound): Ditto.
+	(parser.notifyFile): Allow multiple pids.
+	Make proc local, and not static.
+
 2006-11-21  Nurdin Premji  <npremji@redhat.com>
 
 	* fstack.java: Changed to use FindProc interface. 
